# Rogier

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SPEC.md  pyproject.toml
rogier/: auth.py  config_app.py  csrf.py  dependencies.py  errors.py  logging_setup.py  main.py  overlay.py
rogier/chunking/: breadcrumb.py  export.py  strategies.py
rogier/extraction/: justel_html.py
rogier/fetching/: cache.py  justel_fetcher.py  rate_limiter.py
rogier/parsing/: tree.py
rogier/routes/: auth_routes.py  dashboard_routes.py  document_routes.py  export_routes.py  upload_routes.py  version_routes.py
rogier/static/css/: style.css
rogier/static/js/: edit_node.js  tree_navigation.js
rogier/storage/: documents.py  locks.py  migrations.py  paths.py  versions.py
rogier/templates/: base.html  dashboard.html  error.html  login.html  step_export.html  step_tree.html  step_upload.html  versions.html
rogier/validation/: report.py  semantic.py  structural.py
scripts/: audit_secrets.sh  create_admin_password_hash.py  run_dev.sh
tests/: conftest.py  test_auth.py  test_chunking_export.py  test_chunking_strategies.py  test_config_app.py  test_e2e.py  test_fetching_cache.py  test_fetching_rate_limiter.py  test_justel_extraction.py  test_justel_fetcher.py  test_parsing_tree.py  test_routes_auth.py  test_routes_export.py  test_routes_upload.py  test_storage_documents.py  test_storage_migrations.py  test_storage_versions.py  test_validation_semantic.py  test_validation_structural.py  test_versioning.py
tests/fixtures/: csa_sample.html
